--- a/src/Components/ProductDetail/DetailStyles.css
+++ b/src/Components/ProductDetail/DetailStyles.css
@@ -27,6 +27,21 @@
     margin-bottom: 2em;
 }
 
+.blog{
+    margin: auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    width: 30em;
+}
+.blog-title{
+    font-size: 1.2em;
+    font-weight: 700;
+    margin-bottom: 1em;
+}
+.blog-content{
+ width: 100%;
+}
+
 @media (max-width: 700px) { 
     .detail-main-image{
         height: 100%;
