--- a/src/Components/Upcoming/UpcomingStyles.css
+++ b/src/Components/Upcoming/UpcomingStyles.css
@@ -31,12 +31,22 @@
 	font-color: rgb(44,68,101);
 }
 
-.tile-title-wrapper{
-	width: 9em;
+.wrapper{
+	width: 8em;
 	height: 10em;
 	flex-wrap: 'wrap';
 	display: inline-block;
 	vertical-align: center;
+	padding-top: 55px;
+}
+
+.wrapper-button{
+	width: 6em;
+	height: 10em;
+	flex-wrap: 'wrap';
+	display: inline-block;
+	vertical-align: center;
+	padding-top: 55px;
 }
 
 .upcoming-tile-icon{
@@ -53,11 +63,12 @@
 	text-align: left;
 	border: 1px solid #A9A9A9;
 	font-color: #2c4465;
+	font-weight: 700;
 }
 
 .notify-button{
 	display:inline-block;
- padding:0.7em 1.4em;
+ padding:0.7em 0.7em;
  margin:0 0.3em 0.3em 0;
  border-radius:0.15em;
  box-sizing: border-box;
